--- a/wp-content/themes/fipradotcom/sass/style.scss
+++ b/wp-content/themes/fipradotcom/sass/style.scss
@@ -32,6 +32,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Accessibility
 # Alignments
 # Clearings
+# User Modules
 # Widgets
 # Content
     ## Posts and pages
@@ -91,6 +92,11 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Clearings
 --------------------------------------------------------------*/
 @import "modules/clearings";
+
+/*--------------------------------------------------------------
+# User Modules
+--------------------------------------------------------------*/
+@import "modules/modules";
 
 /*--------------------------------------------------------------
 # Widgets
