--- a/wp-content/themes/fipradotcom/sass/elements/_elements.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_elements.scss
@@ -28,15 +28,12 @@ hr {
 	margin-bottom: 1.5em;
 }
 
-@import "lists";
 
 img {
-	height: auto; /* Make sure images are scaled correctly. */
-	max-width: 100%; /* Adhere to container width. */
+  height: auto; /* Make sure images are scaled correctly. */
+  max-width: 100%; /* Adhere to container width. */
 }
 
-.attachment-post-thumbnail {
-  width:100%;
-}
-
+@import "lists";
 @import "tables";
+@import "buttons";
