--- a/wp-content/themes/fipradotcom/sass/layout/_layout.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_layout.scss
@@ -1,13 +1,83 @@
 @import "header";
 @import "footer";
+@import "gallery";
 
 #content-container {
   width:100%;
   background-color: $color__fipra-light-gray;
   @include media($media__xlarge) { padding:$v-rhythm * 4 0; }
-  &.hero {
-    padding-top:$v-rhythm * 36;
+
+  .hero-banner-container {
+    @include row();
+    @include outer-container($local-max-width: $container__content-width);
+
+    .hero-banner {
+      @include span-columns(10);
+      @include shift(1);
+      padding:($v-rhythm * 6) 0;
+
+      a {
+        display:block;
+        margin:$v-rhythm 0;
+      }
+
+      &.light {
+        h1, .lead {
+          color:white;
+          font-weight: $font__bold;
+          text-shadow:0px -1px 3px $color__fipra-blue-gray;
+        }
+        .btn.primary {
+          text-shadow:0px -1px 3px $color__fipra-light-gray;
+          color:$color__fipra-blue;
+          background-color: white;
+        }
+        .btn.secondary {
+          text-shadow:0px -1px 3px $color__fipra-blue-gray;
+          color:white;
+          border-color: white;
+        }
+      }
+
+      &.dark {
+        h1 {
+          color:$color__fipra-blue;
+        }
+        h1, .lead {
+          text-shadow:0px -1px 10px $color__fipra-light-gray;
+        }
+        .btn.primary {
+          text-shadow:0px -1px 3px lighten($color__fipra-blue, 10%);
+        }
+        .btn.secondary {
+          text-shadow:0px -1px 3px white;
+        }
+      }
+
+      &.center {
+        @include media($media__medium) { @include shift(2); }
+        text-align:center;
+      }
+      &.right {
+        @include media($media__medium) { @include shift(4); }
+        text-align:right;
+      }
+
+      @include media($media__medium) {
+        padding:($v-rhythm * 4) 0 ($v-rhythm * 8);
+        @include span-columns(8);
+        @include shift(2);
+        a {
+          display:inline;
+          margin-right: em(16px);
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
+    }
   }
+
   #content {
     @include row();
     @include outer-container($local-max-width: $container__outer-width);
@@ -24,6 +94,9 @@
     @include media($media__medium) {
       @include span-columns(8);
     }
+    &.full-width {
+      @include span-columns(12);
+    }
   }
 
   #secondary {
@@ -32,7 +105,8 @@
   }
 
   #primary, #secondary {
-    padding:($v-rhythm * 3) 40px;
+    padding:($v-rhythm * 3) 20px;
+    @include media($media__medium) { padding:($v-rhythm * 3) 40px; }
     margin:0;
 
   }
