--- a/wp-content/themes/fipradotcom/sass/typography/_copy.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_copy.scss
@@ -1,5 +1,9 @@
 p {
+  margin-top:0;
   margin-bottom: $v-rhythm * 2;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 dfn, cite, em, i {
@@ -64,4 +68,21 @@ q {
 
 dt {
   font-family: $font__sans;
+}
+
+p {
+  &.lead {
+    font-family: $font__sans;
+    @include font-size(18);
+    letter-spacing: 1px;
+  }
+  &.center {
+    text-align: center;
+  }
+  &.narrow {
+    @include media($media__medium) {
+      padding-left:$column;
+      padding-right:$column;
+    }
+  }
 }
