--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -1,3 +1,19 @@
+#mobile-search-container {
+  @include media($media__medium) { display:none; }
+  background-color: $color__fipra-blue;
+  #mobile-search {
+    display:none;
+    @include outer-container($container__content-width);
+    padding:$v-rhythm em(12px);
+    form#searchform {
+      @include row();
+      @include span-columns(12);
+      input[type=text] { width: 100%; }
+    }
+  }
+}
+
+
 #header-container {
   clear:both;
   border-top:$color__fipra-blue solid $v-rhythm / 2;
@@ -12,7 +28,7 @@
     }
 
     #site-branding-container {
-      @include span-columns(6);
+      @include span-columns(4);
       padding:$v-rhythm 0;
       @include media($media__medium) { @include span-columns(2); padding:0; }
 
@@ -30,9 +46,10 @@
 
     #site-navigation-container {
       position:relative;
-      @include span-columns(10);
+      @include span-columns(8);
       float:right;
       width:auto;
+      @include media($media__medium) { @include span-columns(10); }
 
       .search-global-network-button {
         display:none;
@@ -43,51 +60,6 @@
           right:0;
         }
       }
-      .searchform {
-        float:left;
-        position:relative;
-        width:auto;
-        margin-top:8px;
-        margin-right:5px;
-        font-family: $font__sans;
-        input[type=text] {
-          padding-right:40px;
-          font-family: $font__sans;
-        }
-        .button-search {
-          @include button-reset();
-          position:absolute;
-          top:10px;
-          right:10px;
-          color:$color__fipra-blue-gray;
-          -webkit-box-shadow: none;
-          -moz-box-shadow: none;
-          -ms-box-shadow: none;
-          &:hover {
-            color:$color__fipra-blue;
-          }
-        }
-        ::-webkit-input-placeholder {
-          font-style:italic;
-          font-family: $font__sans;
-        }
-
-        :-moz-placeholder { /* Firefox 18- */
-          font-style:italic;
-          font-family: $font__sans;
-        }
-
-        ::-moz-placeholder {  /* Firefox 19+ */
-          font-style:italic;
-          font-family: $font__sans;
-        }
-
-        :-ms-input-placeholder {
-          font-style:italic;
-          font-family: $font__sans;
-        }
-      }
-
       a.global-network-button {
         display: inline-block;
         float:left;
@@ -111,4 +83,49 @@
 
   }
 
+}
+
+.searchform {
+  float:left;
+  position:relative;
+  width:auto;
+  margin-top:8px;
+  margin-right:5px;
+  font-family: $font__sans;
+  input[type=text] {
+    padding-right:40px;
+    font-family: $font__sans;
+  }
+  .button-search {
+    @include button-reset();
+    position:absolute;
+    top:10px;
+    right:10px;
+    color:$color__fipra-blue-gray;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none;
+    &:hover {
+      color:$color__fipra-blue;
+    }
+  }
+  ::-webkit-input-placeholder {
+    font-style:italic;
+    font-family: $font__sans;
+  }
+
+  :-moz-placeholder { /* Firefox 18- */
+    font-style:italic;
+    font-family: $font__sans;
+  }
+
+  ::-moz-placeholder {  /* Firefox 19+ */
+    font-style:italic;
+    font-family: $font__sans;
+  }
+
+  :-ms-input-placeholder {
+    font-style:italic;
+    font-family: $font__sans;
+  }
 }
