--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -4,52 +4,63 @@
   float: right;
   width: 100%;
   font-family: $font__sans;
-  margin-top:$v-rhythm * 3;
+  @include media($media__medium) {
+    margin-top: $v-rhythm * 3;
+  }
+  @include media(max-width $media__medium) {
+    width: 100%;
+  }
 
   ul {
     display: none;
+    @include media($media__medium) {
+      display: block;
+    }
     list-style: none;
     margin: 0;
     padding-left: 0;
+    position: relative;
+    float: right;
 
     & > li {
-      float:left;
-      position: relative;
-      @include font-size(16);
-      font-weight:$font__bold;
-      &:not(:last-child) {
-        margin-right: em(40px);
+      @include media($media__medium) {
+        float: left;
+        &:not(:last-child) {
+          margin-right: em(40px);
+        }
       }
+      @include font-size(16);
+      font-weight: $font__bold;
       &.current-menu-item > a,
       &.current-page-ancestor > a {
-        font-weight:$font__black;
-        color:$color__fipra-blue;
-        border-bottom:6px solid $color__fipra-blue;
+        font-weight: $font__black;
+        color: $color__fipra-blue;
+        border-bottom: 6px solid $color__fipra-blue;
       }
 
       & > a {
         display: block;
         text-decoration: none;
-        padding:($v-rhythm * 2) 0 $v-rhythm;
-        color:$color__fipra-blue-gray;
+        padding: ($v-rhythm * 2) 0 $v-rhythm;
+        color: $color__fipra-blue-gray;
       }
       &:hover > a,
       &.focus > a {
-        color:$color__fipra-blue;
+        color: $color__fipra-blue;
       }
     }
 
-//    Start of second level
+    //    Start of second level
     ul {
       box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
       background-color: white;
-      border-top:6px solid $color__fipra-blue;
+      border-top: 6px solid $color__fipra-blue;
       float: left;
       position: absolute;
       top: $v-rhythm * 6;
       left: -999em;
       z-index: 99999;
-      margin-top:-6px;
+      margin-top: -6px;
       width: 200px;
 
       //      Start of third level
@@ -65,7 +76,7 @@
         &.focus > ul {
           left: 100%;
         }
-        width:100%;
+        width: 100%;
         &:hover {
           background-color: $color__fipra-periwinkle;
         }
@@ -74,7 +85,7 @@
 
       a {
         display: block;
-        padding:$v-rhythm / 2 em(24px);
+        padding: $v-rhythm / 2 em(24px);
       }
 
       a:hover,
@@ -90,21 +101,60 @@
   }
   //  End of top level
 
+}
+
+/* Mobile menu */
+
+//.menu-toggle,
+//.main-navigation.toggled ul {
+//  display: block;
+//}
+
+.main-navigation {
+  //  Mobile nav buttons
+  .btn {
+    margin-top: $v-rhythm * 1.5;
+    margin-right: em(5px);
+    padding: ($v-rhythm / 2) em(12px);
+    cursor: pointer;
+  }
 
 }
 
-/* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
-  display: block;
-}
-
-@media screen and (min-width: 37.5em) {
-  .menu-toggle {
+#primary-menu-mobile-container {
+  @include media($media__medium) {
     display: none;
   }
-  .main-navigation ul {
-    display: block;
+
+  #primary-menu-mobile {
+    display: none;
+//    Mobile menu
+    ul {
+      font-family: $font__sans;
+      font-weight: $font__bold;
+      margin-bottom:0;
+      li {
+        border-top:1px solid lighten($color__fipra-periwinkle, 7%);
+        a {
+          display:block;
+          text-align: center;
+          padding:$v-rhythm * 1.5 em(10px);
+          color:$color__fipra-blue;
+          &:hover {
+            background-color: lighten($color__fipra-periwinkle, 7%);
+          }
+        }
+      }
+    }
+  }
+
+}
+
+@include media($media__medium) {
+  //  .menu-toggle,
+  .mobile-menu-toggle,
+  .mobile-menu-search {
+    display: none;
   }
 }
 
