--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -421,8 +421,6 @@ table {
 .btn {
   display: inline-block;
   font-family: 'Lato', Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  font-size: 0.875rem;
   font-weight: 700;
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
@@ -454,6 +452,36 @@ table {
 /*--------------------------------------------------------------
 # Layout
 --------------------------------------------------------------*/
+#mobile-search-container {
+  background-color: #00257f; }
+  @media screen and (min-width: 769px) {
+    #mobile-search-container {
+      display: none; } }
+  #mobile-search-container #mobile-search {
+    display: none;
+    max-width: 1020px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0.75rem 0.75em; }
+    #mobile-search-container #mobile-search::after {
+      clear: both;
+      content: "";
+      display: table; }
+    #mobile-search-container #mobile-search form#searchform {
+      display: block;
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 100%; }
+      #mobile-search-container #mobile-search form#searchform::after {
+        clear: both;
+        content: "";
+        display: table; }
+      #mobile-search-container #mobile-search form#searchform:last-child {
+        margin-right: 0; }
+      #mobile-search-container #mobile-search form#searchform input[type=text] {
+        width: 100%; }
+
 #header-container {
   clear: both;
   border-top: #00257f solid 0.375rem; }
@@ -481,7 +509,7 @@ table {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 48.82117%;
+      width: 31.76157%;
       padding: 0.75rem 0; }
       #header-container header.site-header #site-branding-container:last-child {
         margin-right: 0; }
@@ -510,11 +538,19 @@ table {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 82.94039%;
+      width: 65.88078%;
       float: right;
       width: auto; }
       #header-container header.site-header #site-navigation-container:last-child {
         margin-right: 0; }
+      @media screen and (min-width: 769px) {
+        #header-container header.site-header #site-navigation-container {
+          float: left;
+          display: block;
+          margin-right: 2.35765%;
+          width: 82.94039%; }
+          #header-container header.site-header #site-navigation-container:last-child {
+            margin-right: 0; } }
       #header-container header.site-header #site-navigation-container .search-global-network-button {
         display: none; }
         @media screen and (min-width: 769px) {
@@ -523,45 +559,6 @@ table {
             position: absolute;
             top: 0;
             right: 0; } }
-      #header-container header.site-header #site-navigation-container .searchform {
-        float: left;
-        position: relative;
-        width: auto;
-        margin-top: 8px;
-        margin-right: 5px;
-        font-family: 'Lato', Arial, Helvetica, sans-serif; }
-        #header-container header.site-header #site-navigation-container .searchform input[type=text] {
-          padding-right: 40px;
-          font-family: 'Lato', Arial, Helvetica, sans-serif; }
-        #header-container header.site-header #site-navigation-container .searchform .button-search {
-          background: none;
-          border: none;
-          margin: 0;
-          padding: 0;
-          cursor: pointer;
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          color: #5F697F;
-          -webkit-box-shadow: none;
-          -moz-box-shadow: none;
-          -ms-box-shadow: none; }
-          #header-container header.site-header #site-navigation-container .searchform .button-search:hover {
-            color: #00257f; }
-        #header-container header.site-header #site-navigation-container .searchform ::-webkit-input-placeholder {
-          font-style: italic;
-          font-family: 'Lato', Arial, Helvetica, sans-serif; }
-        #header-container header.site-header #site-navigation-container .searchform :-moz-placeholder {
-          /* Firefox 18- */
-          font-style: italic;
-          font-family: 'Lato', Arial, Helvetica, sans-serif; }
-        #header-container header.site-header #site-navigation-container .searchform ::-moz-placeholder {
-          /* Firefox 19+ */
-          font-style: italic;
-          font-family: 'Lato', Arial, Helvetica, sans-serif; }
-        #header-container header.site-header #site-navigation-container .searchform :-ms-input-placeholder {
-          font-style: italic;
-          font-family: 'Lato', Arial, Helvetica, sans-serif; }
       #header-container header.site-header #site-navigation-container a.global-network-button {
         display: inline-block;
         float: left;
@@ -580,6 +577,46 @@ table {
       #header-container header.site-header #site-navigation-container button.menu-toggle {
         float: right;
         margin-top: 1.5rem; }
+
+.searchform {
+  float: left;
+  position: relative;
+  width: auto;
+  margin-top: 8px;
+  margin-right: 5px;
+  font-family: 'Lato', Arial, Helvetica, sans-serif; }
+  .searchform input[type=text] {
+    padding-right: 40px;
+    font-family: 'Lato', Arial, Helvetica, sans-serif; }
+  .searchform .button-search {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #5F697F;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none; }
+    .searchform .button-search:hover {
+      color: #00257f; }
+  .searchform ::-webkit-input-placeholder {
+    font-style: italic;
+    font-family: 'Lato', Arial, Helvetica, sans-serif; }
+  .searchform :-moz-placeholder {
+    /* Firefox 18- */
+    font-style: italic;
+    font-family: 'Lato', Arial, Helvetica, sans-serif; }
+  .searchform ::-moz-placeholder {
+    /* Firefox 19+ */
+    font-style: italic;
+    font-family: 'Lato', Arial, Helvetica, sans-serif; }
+  .searchform :-ms-input-placeholder {
+    font-style: italic;
+    font-family: 'Lato', Arial, Helvetica, sans-serif; }
 
 #footer-global-network-container {
   clear: both;
@@ -604,10 +641,8 @@ table {
           display: inline-block;
           padding-right: 20px; } }
     #footer-global-network-container #footer-global-network select {
-      font-size: 18px;
-      font-size: 1.125rem;
-      padding: 0.375rem 20px;
-      width: 300px;
+      padding: 0.375rem 0.625em;
+      width: 80%;
       border: 0;
       background-color: #EBEAE8;
       border-bottom-left-radius: 4px;
@@ -616,6 +651,9 @@ table {
       border-top-right-radius: 4px; }
       @media screen and (min-width: 769px) {
         #footer-global-network-container #footer-global-network select {
+          padding: 0.375rem 1.25em;
+          font-size: 18px;
+          font-size: 1.125rem;
           width: 500px; } }
 
 #footer-container {
@@ -852,7 +890,7 @@ table {
             margin-left: 34.11922%; } }
       @media screen and (min-width: 769px) {
         #content-container .hero-banner-container .hero-banner {
-          padding: 3rem 0 6rem;
+          padding: 3rem 0 4.5rem;
           float: left;
           display: block;
           margin-right: 2.35765%;
@@ -992,21 +1030,32 @@ a {
   display: block;
   float: right;
   width: 100%;
-  font-family: 'Lato', Arial, Helvetica, sans-serif;
-  margin-top: 2.25rem; }
+  font-family: 'Lato', Arial, Helvetica, sans-serif; }
+  @media screen and (min-width: 769px) {
+    .main-navigation {
+      margin-top: 2.25rem; } }
+  @media screen and (max-width: 769px)  {
+    .main-navigation {
+      width: 100%; } }
   .main-navigation ul {
     display: none;
     list-style: none;
     margin: 0;
-    padding-left: 0; }
+    padding-left: 0;
+    position: relative;
+    float: right; }
+    @media screen and (min-width: 769px) {
+      .main-navigation ul {
+        display: block; } }
     .main-navigation ul > li {
-      float: left;
-      position: relative;
       font-size: 16px;
       font-size: 1rem;
       font-weight: 700; }
-      .main-navigation ul > li:not(:last-child) {
-        margin-right: 2.5em; }
+      @media screen and (min-width: 769px) {
+        .main-navigation ul > li {
+          float: left; }
+          .main-navigation ul > li:not(:last-child) {
+            margin-right: 2.5em; } }
       .main-navigation ul > li.current-menu-item > a, .main-navigation ul > li.current-page-ancestor > a {
         font-weight: 900;
         color: #00257f;
@@ -1047,15 +1096,35 @@ a {
     .main-navigation ul li:hover > ul, .main-navigation ul li.focus > ul {
       left: auto; }
 
-/* Small menu. */
-.menu-toggle, .main-navigation.toggled ul {
-  display: block; }
+/* Mobile menu */
+.main-navigation .btn {
+  margin-top: 1.125rem;
+  margin-right: 0.3125em;
+  padding: 0.375rem 0.75em;
+  cursor: pointer; }
 
-@media screen and (min-width: 37.5em) {
-  .menu-toggle {
-    display: none; }
-  .main-navigation ul {
-    display: block; } }
+@media screen and (min-width: 769px) {
+  #primary-menu-mobile-container {
+    display: none; } }
+#primary-menu-mobile-container #primary-menu-mobile {
+  display: none; }
+  #primary-menu-mobile-container #primary-menu-mobile ul {
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    margin-bottom: 0; }
+    #primary-menu-mobile-container #primary-menu-mobile ul li {
+      border-top: 1px solid #e4e7f1; }
+      #primary-menu-mobile-container #primary-menu-mobile ul li a {
+        display: block;
+        text-align: center;
+        padding: 1.125rem 0.625em;
+        color: #00257f; }
+        #primary-menu-mobile-container #primary-menu-mobile ul li a:hover {
+          background-color: #e4e7f1; }
+
+@media screen and (min-width: 769px) {
+  .mobile-menu-toggle, .mobile-menu-search {
+    display: none; } }
 
 .site-main .comment-navigation, .site-main .posts-navigation, .site-main .post-navigation {
   margin: 0 0 1.5em;
