--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -52,10 +52,10 @@
 
     //    Start of second level
     ul {
+      float: left;
       box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
       background-color: white;
       border-top: 6px solid $color__fipra-blue;
-      float: left;
       position: absolute;
       top: $v-rhythm * 6;
       left: -999em;
@@ -72,6 +72,7 @@
       li {
         @include font-size(14);
         border-bottom: 1px solid $color__fipra-periwinkle;
+        line-height:$v-rhythm * 1.5;
         &:hover > ul,
         &.focus > ul {
           left: 100%;
@@ -79,6 +80,12 @@
         width: 100%;
         &:hover {
           background-color: $color__fipra-periwinkle;
+        }
+        &.current-menu-item > a,
+        &.current-page-ancestor > a {
+          font-weight: $font__bold;
+          color: $color__fipra-blue-gray;
+          border-bottom: 0;
         }
       }
       //          End of third level
