--- a/wp-content/themes/fipradotcom/sass/typography/_headings.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_headings.scss
@@ -29,27 +29,49 @@ h3, h4, h5, h6 {
 }
 
 h1 {
-  @include font-size(36);
-  line-height: $v-rhythm * 3;
   font-weight: $font__bold;
+  @include font-size(28);
+  line-height: $v-rhythm * 2.5;
+
+  @include media($media__medium) {
+    @include font-size(36);
+    line-height: $v-rhythm * 3;
+  }
 }
 
 h2 {
-  @include font-size(32);
-  line-height: $v-rhythm * 3;
-  font-weight: $font__light;
+  font-weight: $font__bold;
   color:$color__fipra-blue;
+  @include font-size(24);
+  line-height: $v-rhythm * 2.5;
+
+  @include media($media__medium) {
+    font-weight: $font__light;
+    @include font-size(32);
+    line-height: $v-rhythm * 3;
+  }
 }
 
 h3 {
-  @include font-size(24);
-  line-height: $v-rhythm * 2;
   font-weight: $font__bold;
+  @include font-size(21);
+  line-height: $v-rhythm * 2;
+
+  @include media($media__medium) {
+    @include font-size(24);
+    line-height: $v-rhythm * 2;
+  }
 }
 
 h4 {
-  @include font-size(21);
   font-weight: $font__bold;
+  @include font-size(18);
+  line-height: $v-rhythm * 2;
+
+  @include media($media__medium) {
+    @include font-size(21);
+    line-height: $v-rhythm * 2;
+  }
 }
 
 h5 {
