--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -225,28 +225,50 @@ h3, h4, h5, h6 {
   margin: 0 0 0.75rem 0; }
 
 h1 {
-  font-size: 36px;
-  font-size: 2.25rem;
-  line-height: 2.25rem;
-  font-weight: 700; }
+  font-weight: 700;
+  font-size: 28px;
+  font-size: 1.75rem;
+  line-height: 1.875rem; }
+  @media screen and (min-width: 769px) {
+    h1 {
+      font-size: 36px;
+      font-size: 2.25rem;
+      line-height: 2.25rem; } }
 
 h2 {
-  font-size: 32px;
-  font-size: 2rem;
-  line-height: 2.25rem;
-  font-weight: 300;
-  color: #00257f; }
-
-h3 {
+  font-weight: 700;
+  color: #00257f;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.5rem;
-  font-weight: 700; }
+  line-height: 1.875rem; }
+  @media screen and (min-width: 769px) {
+    h2 {
+      font-weight: 300;
+      font-size: 32px;
+      font-size: 2rem;
+      line-height: 2.25rem; } }
 
-h4 {
+h3 {
+  font-weight: 700;
   font-size: 21px;
   font-size: 1.3125rem;
-  font-weight: 700; }
+  line-height: 1.5rem; }
+  @media screen and (min-width: 769px) {
+    h3 {
+      font-size: 24px;
+      font-size: 1.5rem;
+      line-height: 1.5rem; } }
+
+h4 {
+  font-weight: 700;
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.5rem; }
+  @media screen and (min-width: 769px) {
+    h4 {
+      font-size: 21px;
+      font-size: 1.3125rem;
+      line-height: 1.5rem; } }
 
 h5 {
   font-size: 16px;
@@ -324,8 +346,7 @@ dt {
 p.lead {
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   font-size: 18px;
-  font-size: 1.125rem;
-  letter-spacing: 1px; }
+  font-size: 1.125rem; }
 p.center {
   text-align: center; }
 @media screen and (min-width: 769px) {
@@ -356,7 +377,7 @@ hr {
   background-color: #ccc;
   border: 0;
   height: 1px;
-  margin-bottom: 1.5em; }
+  margin: 1.5rem 0; }
 
 img {
   height: auto;
@@ -418,8 +439,12 @@ table {
   table tbody tr:nth-child(even) {
     background-color: #eef0f6; }
 
-.btn {
+.btn, .btn:link, .btn:visited {
   display: inline-block;
+  font-size: 16px;
+  font-size: 1rem;
+  color: #00257f;
+  background-color: #ccd3e5;
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   font-weight: 700;
   border-bottom-left-radius: 4px;
@@ -429,23 +454,25 @@ table {
   padding: 0.5625rem 1em;
   margin-bottom: 0.375rem;
   margin-right: 1em; }
-  .btn:last-child {
+  .btn:hover, .btn:link:hover, .btn:visited:hover {
+    color: #5F697F; }
+  .btn:last-child, .btn:link:last-child, .btn:visited:last-child {
     margin-right: 0; }
-  .btn.primary {
+  .btn.primary, .btn:link.primary, .btn:visited.primary {
     background-color: #00257f;
     color: white;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
     text-shadow: 0px -1px 0px black; }
-    .btn.primary:hover {
+    .btn.primary:hover, .btn:link.primary:hover, .btn:visited.primary:hover {
       background-color: #5F697F; }
-  .btn.secondary {
-    background-color: rgba(255, 255, 255, 0.6);
+  .btn.secondary, .btn:link.secondary, .btn:visited.secondary {
+    background-color: rgba(255, 255, 255, 0);
     border: 1px solid #5F697F;
     color: #5F697F;
     -webkit-transition: all 0.2s;
     transition: all 0.2s; }
-    .btn.secondary:hover {
+    .btn.secondary:hover, .btn:link.secondary:hover, .btn:visited.secondary:hover {
       border: 1px solid #00257f;
       color: #00257f; }
 
@@ -484,7 +511,11 @@ table {
 
 #header-container {
   clear: both;
-  border-top: #00257f solid 0.375rem; }
+  border-top: #00257f solid 0.375rem;
+  border-bottom: 1px solid #e0e0e0;
+  background: -webkit-linear-gradient(white 90%, #f2f2f2 100%);
+  background: -webkit-linear-gradient(to, #f2f2f2 100%);
+  background: linear-gradient(to   , #f2f2f2 100%); }
   #header-container header.site-header {
     display: block;
     max-width: 1100px;
@@ -566,9 +597,9 @@ table {
         font-weight: 900;
         color: white;
         background-color: #00257f;
-        background: -webkit-linear-gradient(#00257f 40%, #00164c 100%);
-        background: -webkit-linear-gradient(to, #00164c 100%);
-        background: linear-gradient(to   , #00164c 100%);
+        background: -webkit-linear-gradient(#00257f 60%, #001b5b 100%);
+        background: -webkit-linear-gradient(to, #001b5b 100%);
+        background: linear-gradient(to   , #001b5b 100%);
         padding: 0.75rem 0.75em 0.375rem 0.75em;
         -webkit-transition: all 0.2s ease-out;
         transition: all 0.2s ease-out; }
@@ -736,8 +767,10 @@ table {
   .gallery .gallery-block.center {
     text-align: center; }
   .gallery .gallery-block .gallery-block-content {
-    padding: 1.5rem 1.5em;
-    min-height: 18.75em; }
+    padding: 1.5rem 1.5em; }
+    @media screen and (min-width: 940px) {
+      .gallery .gallery-block .gallery-block-content {
+        min-height: 18.75em; } }
   .gallery .gallery-block.bg {
     background: #EBEAE8; }
     .gallery .gallery-block.bg.orange {
@@ -827,17 +860,162 @@ table {
       .gallery.list .gallery-block-content:last-child {
         margin-right: 0; } }
 
+.hero-banner {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
+  text-align: center;
+  padding: 1.5rem 0; }
+  .hero-banner:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 481px) {
+    .hero-banner {
+      padding: 4.5rem 0;
+      margin-left: 8.5298%;
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 82.94039%; }
+      .hero-banner:last-child {
+        margin-right: 0; } }
+  .hero-banner h1 {
+    font-size: 30px;
+    font-size: 1.875rem;
+    line-height: 2.25rem; }
+    @media screen and (min-width: 769px) {
+      .hero-banner h1 {
+        font-weight: 300;
+        font-size: 38px;
+        font-size: 2.375rem;
+        line-height: 3rem; } }
+    @media screen and (min-width: 940px) {
+      .hero-banner h1 {
+        font-weight: 300;
+        font-size: 50px;
+        font-size: 3.125rem;
+        line-height: 3.75rem; } }
+  .hero-banner h5 {
+    color: white;
+    margin: 0; }
+  @media screen and (max-width: 940px)  {
+    .hero-banner .lead {
+      font-size: 16px;
+      font-size: 1rem; } }
+  .hero-banner a {
+    display: block;
+    margin: 0.75rem 0; }
+  .hero-banner.light h1, .hero-banner.light .lead {
+    color: white;
+    text-shadow: 0px 1px 1px black; }
+  .hero-banner.light .btn.primary {
+    text-shadow: none;
+    color: #00257f;
+    background-color: white; }
+  .hero-banner.light .btn.secondary {
+    color: white;
+    border-color: white; }
+  .hero-banner.dark h1 {
+    color: #0d0d0d; }
+  .hero-banner.dark h1, .hero-banner.dark .lead {
+    text-shadow: 0px 1px 1px #EBEAE8; }
+  .hero-banner.dark .btn.primary {
+    text-shadow: 0px 1px 3px #0034b2; }
+  .hero-banner.dark .btn.secondary {
+    border: 1px solid #00257f;
+    color: #00257f; }
+    .hero-banner.dark .btn.secondary:hover {
+      border: 1px solid #5F697F;
+      color: #5F697F; }
+  @media screen and (min-width: 769px) {
+    .hero-banner.left {
+      margin-left: 0%;
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 57.35098%;
+      text-align: left; }
+      .hero-banner.left:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 769px) {
+    .hero-banner.right {
+      margin-left: 42.64902%;
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 57.35098%;
+      text-align: left; }
+      .hero-banner.right:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 769px) {
+    .hero-banner.center {
+      margin-left: 17.05961%;
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 65.88078%;
+      text-align: center; }
+      .hero-banner.center:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 769px) {
+    .hero-banner {
+      text-align: left;
+      padding: 5.25rem 0 5.25rem;
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 57.35098%;
+      margin-left: 8.5298%; }
+      .hero-banner:last-child {
+        margin-right: 0; }
+      .hero-banner a {
+        display: inline;
+        margin-right: 1em; }
+        .hero-banner a:last-child {
+          margin-right: 0; } }
+  @media screen and (min-width: 1200px) {
+    .hero-banner {
+      padding: 7.5rem 0 7.5rem; } }
+
+.page-banner {
+  margin-bottom: 2.25rem; }
+  .page-banner.left {
+    text-align: left; }
+  .page-banner.center {
+    text-align: center; }
+  .page-banner.right {
+    text-align: right; }
+
+.hero-banner .btn, .page-banner .btn {
+  display: block;
+  margin-right: 0; }
+  @media screen and (min-width: 481px) {
+    .hero-banner .btn, .page-banner .btn {
+      margin-right: 0.375em;
+      display: inline-block; } }
+
 #content-container {
   width: 100%;
-  background-color: #EBEAE8; }
+  background-color: #EBEAE8;
+  background-repeat: no-repeat, no-repeat; }
+  @media screen and (max-width: 769px)  {
+    #content-container {
+      background-size: contain, auto 600px;
+      background-position: 0 0, top center; } }
+  @media screen and (min-width: 769px) {
+    #content-container {
+      background-size: contain, contain; } }
   @media screen and (min-width: 1200px) {
     #content-container {
-      padding: 3rem 0; } }
+      padding: 1.5rem 0; }
+      #content-container.with-hero-banner {
+        padding-top: 0; } }
   #content-container .hero-banner-container {
     display: block;
     max-width: 1020px;
     margin-left: auto;
-    margin-right: auto; }
+    margin-right: auto;
+    padding: 0 1.5em; }
     #content-container .hero-banner-container::after {
       clear: both;
       content: "";
@@ -846,63 +1024,6 @@ table {
       clear: both;
       content: "";
       display: table; }
-    #content-container .hero-banner-container .hero-banner {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 82.94039%;
-      margin-left: 8.5298%;
-      padding: 4.5rem 0; }
-      #content-container .hero-banner-container .hero-banner:last-child {
-        margin-right: 0; }
-      #content-container .hero-banner-container .hero-banner a {
-        display: block;
-        margin: 0.75rem 0; }
-      #content-container .hero-banner-container .hero-banner.light h1, #content-container .hero-banner-container .hero-banner.light .lead {
-        color: white;
-        font-weight: 700;
-        text-shadow: 0px -1px 3px #5F697F; }
-      #content-container .hero-banner-container .hero-banner.light .btn.primary {
-        text-shadow: 0px -1px 3px #EBEAE8;
-        color: #00257f;
-        background-color: white; }
-      #content-container .hero-banner-container .hero-banner.light .btn.secondary {
-        text-shadow: 0px -1px 3px #5F697F;
-        color: white;
-        border-color: white; }
-      #content-container .hero-banner-container .hero-banner.dark h1 {
-        color: #00257f; }
-      #content-container .hero-banner-container .hero-banner.dark h1, #content-container .hero-banner-container .hero-banner.dark .lead {
-        text-shadow: 0px -1px 10px #EBEAE8; }
-      #content-container .hero-banner-container .hero-banner.dark .btn.primary {
-        text-shadow: 0px -1px 3px #0034b2; }
-      #content-container .hero-banner-container .hero-banner.dark .btn.secondary {
-        text-shadow: 0px -1px 3px white; }
-      #content-container .hero-banner-container .hero-banner.center {
-        text-align: center; }
-        @media screen and (min-width: 769px) {
-          #content-container .hero-banner-container .hero-banner.center {
-            margin-left: 17.05961%; } }
-      #content-container .hero-banner-container .hero-banner.right {
-        text-align: right; }
-        @media screen and (min-width: 769px) {
-          #content-container .hero-banner-container .hero-banner.right {
-            margin-left: 34.11922%; } }
-      @media screen and (min-width: 769px) {
-        #content-container .hero-banner-container .hero-banner {
-          padding: 3rem 0 4.5rem;
-          float: left;
-          display: block;
-          margin-right: 2.35765%;
-          width: 65.88078%;
-          margin-left: 17.05961%; }
-          #content-container .hero-banner-container .hero-banner:last-child {
-            margin-right: 0; }
-          #content-container .hero-banner-container .hero-banner a {
-            display: inline;
-            margin-right: 1em; }
-            #content-container .hero-banner-container .hero-banner a:last-child {
-              margin-right: 0; } }
   #content-container #content {
     display: block;
     max-width: 1100px;
@@ -1068,10 +1189,10 @@ a {
       .main-navigation ul > li:hover > a, .main-navigation ul > li.focus > a {
         color: #00257f; }
     .main-navigation ul ul {
+      float: left;
       box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
       background-color: white;
       border-top: 6px solid #00257f;
-      float: left;
       position: absolute;
       top: 4.5rem;
       left: -999em;
@@ -1085,11 +1206,16 @@ a {
         font-size: 14px;
         font-size: 0.875rem;
         border-bottom: 1px solid #ccd3e5;
+        line-height: 1.125rem;
         width: 100%; }
         .main-navigation ul ul li:hover > ul, .main-navigation ul ul li.focus > ul {
           left: 100%; }
         .main-navigation ul ul li:hover {
           background-color: #ccd3e5; }
+        .main-navigation ul ul li.current-menu-item > a, .main-navigation ul ul li.current-page-ancestor > a {
+          font-weight: 700;
+          color: #5F697F;
+          border-bottom: 0; }
       .main-navigation ul ul a {
         display: block;
         padding: 0.375rem 1.5em; }
