--- a/wp-content/themes/fipradotcom/sass/layout/_hero-banner.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_hero-banner.scss
@@ -1,4 +1,5 @@
 .hero-banner {
+  @include clearfix;
   @include span-columns(12);
   text-align: center;
   padding:($v-rhythm * 2) 0;
@@ -69,7 +70,8 @@
   }
 
   &.left {
-    @include media($media__medium) { @include shift(0); @include span-columns(7); text-align:left; }
+    @include media($media__medium) { @include shift(1); @include span-columns(7); text-align:left; }
+    @include media($media__large) { @include shift(0); }
 
   }
   &.right {
