--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -22,6 +22,9 @@
       }
     }
     select {
+      optgroup {
+        background-color:darken($color__fipra-light-gray, 10%);
+      }
       padding:$v-rhythm / 2 em(10px);
       width:80%;
       border:0;
@@ -38,8 +41,31 @@
 }
 
 #footer-container {
-  clear:both;
+  @include clearfix;
+  font-family:$font__sans;
+  color:lighten($color__fipra-blue-gray, 45%);
   background-color: lighten($color__fipra-blue-gray, 10%);
+
+  h5 { color:lighten($color__fipra-blue-gray, 30%); }
+  a {
+    color:white;
+    &:hover { color:darken(white, 20%); }
+
+    &.btn {
+      color:white;
+      background-color:lighten($color__fipra-blue-gray, 20%);
+      @include font-size(14);
+    }
+    &.primary {
+      color:$color__fipra-blue-gray;
+      text-shadow: none;
+      background-color:white;
+      &:hover { background-color:darken(white, 20%); }
+    }
+    &.secondary { border-color: white; background: none;
+      &:hover { border-color: darken(white, 20%); }
+    }
+  }
 
   footer {
     @include row();
@@ -51,7 +77,9 @@
 
     .footer-section {
       @include span-columns(12);
-      margin-bottom:$v-rhythm;
+      padding:$v-rhythm * 1.5 em(24px) $v-rhythm * 1.5 0;
+      @include font-size(14);
+//      margin-bottom:$v-rhythm;
       @include media($media__medium) {
         @include span-columns(4);
       }
@@ -61,15 +89,49 @@
 }
 
 #site-info-container {
-  clear:both;
+  @include clearfix;
+  font-family: $font__sans;
+  @include font-size(12);
   background-color: $color__fipra-blue-gray;
 
   .site-info {
+    a {
+      color: white;
+      &:hover {
+        color: darken(white, 20%);
+      }
+    }
     @include row();
-    padding:$v-rhythm 40px;
+    color:lighten($color__fipra-blue-gray, 35%);
+    padding:$v-rhythm 40px $v-rhythm * 2;
     @include outer-container($container__outer-width);
     @include media($media__xlarge) {
       padding:$v-rhythm 0;
+    }
+
+    .footer-copyright, .footer-social-links {
+      @include span-columns(12);
+      @include media($media__medium) { @include span-columns(6); }
+    }
+
+    .footer-social-links {
+      text-align:left;
+      @include media($media__medium) { text-align: right; }
+      a {
+        @include font-size(20);
+        display:inline-block;
+        margin-right:em(4px);
+        @include media($media__medium) { margin:0 0 0 em(4px); }
+        @include border-top-radius(4px);
+        @include border-bottom-radius(4px);
+        text-shadow: 0 -2px 0px $color__fipra-blue-gray;
+        border-bottom:1px solid darken($color__fipra-blue-gray, 10%);
+        padding:$v-rhythm / 2 em(12px);
+        background-color:lighten($color__fipra-blue-gray, 10%);
+        color:white;
+        &:hover { background-color: lighten($color__fipra-blue-gray, 5%); border-bottom:0px; }
+
+      }
     }
   }
 }
